[tool.poetry]
name = "xlemoo"
version = "0.1.0"
description = "Experiments related to the study of explainable learnable evolutionary multiobjective optimization."
authors = ["Giovanni Misitano <giovanni.a.misitano@jyu.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7 <3.10"
desdeo-emo = { path = "/home/kilo/workspace/desdeo-emo", develop = true }
jupyterlab = "^3.3.2"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
