[tool.poetry]
name = "XLEMOO"
version = "0.1.0"
description = "Experiments related to the study of explainable learnable evolutionary multiobjective optimization."
authors = ["Giovanni Misitano <giovanni.a.misitano@jyu.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7 <3.10"
desdeo-emo = { path = "/home/kilo/workspace/desdeo-emo", develop = true }
jupyterlab = "^3.3.2"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
rulefit = "^0.3.1"
imodels = "^1.2.5"
pytest = "^7.1.1"
desdeo-tools = {path="/home/kilo/workspace/desdeo-tools", develop = true}

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
