[tool.poetry]
name = "XLEMOO"
version = "1.0.0"
description = "Experiments related to the study of explainable learnable evolutionary multiobjective optimization."
authors = ["Giovanni Misitano <giovanni.a.misitano@jyu.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9 <3.11"
desdeo-emo = ">=1.5.0"
jupyterlab = "^3.3.2"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
rulefit = "^0.3.1"
imodels = "=1.3.5"
desdeo-tools = "^1.6.1"
desdeo-problem = "^1.4.6"
seaborn = "^0.12.1"

[tool.poetry.group.dev.dependencies]
nbsphinx = "^0.9.2"
sphinx-autobuild = "^2021.3.14"
pytest = "^7.1.1"
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
black = "^22.1.0"
snakemake = "^7.15.2"
pytest-rerunfailures = "^11.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
